# Kvant-Novour-Fullstack

./: .dockerignore  .gitignore  README.md  docker-compose.yml  nginx.conf
backend/: Dockerfile  pyproject.toml
backend/core/: settings.py  urls.py
backend/forms/: models.py  serializers.py  urls.py  views.py
backend/forms/migrations/: 0003_formresponse_alter_answer_response_delete_response.py  0004_alter_form_slug.py  0005_answer_is_reviewed_answer_manual_score_and_more.py  0006_question_correct_answer.py  0007_form_one_time_participation_survey_and_more.py  0008_formresponse_user.py
backend/news/: models.py  serializers.py  urls.py  views.py
backend/news/migrations/: 0005_category_color_category_image.py  0007_news_form_id_news_form_slug.py  0009_alter_news_image.py  0010_auto_20260723_0752.py
backend/notifications/: models.py  serializers.py  urls.py  views.py
backend/notifications/migrations/: 0001_initial.py  0002_notification_news.py
backend/users/: admin.py  authentication.py  middleware.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  0003_remove_userprofile_first_name_and_more.py  0007_alter_userprofile_phone.py  0008_rename_image_userprofile_avatar.py  0009_alter_userprofile_avatar.py  0010_usersession.py  0011_alter_userprofile_role.py
frontend/: Dockerfile  middleware.ts  next.config.ts  package-lock.json  package.json  proxy.ts  tsconfig.json
gateway/: nginx.conf
kvantorium_backend/: db.sqlite3
kvantorium_frontend/: next.config.ts  package-lock.json  package.json
(+185 files in other folders)
