[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Michael",email = "michaelvoov@yandex.ru"}
]
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "django (>=6.0.7,<7.0.0)",
    "rest-framework-simplejwt (>=0.0.2,<0.0.3)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
    "django-cors-headers (>=4.9.0,<5.0.0)",
    "django-user-agents (>=0.4.0,<0.5.0)",
    "pytils (>=0.4.4,<0.5.0)",
    "requests (>=2.34.2,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pillow (>=12.3.0,<13.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
